fix viewport scrollbars

--- a/src/assets/scss/_shared-styles.scss
+++ b/src/assets/scss/_shared-styles.scss
@@ -90,15 +90,6 @@
 /* Base - TODO: Cleanup / split into files
 -------------------------------------------------- */
 
-.ubuntu,
-.windows,
-.blink:not(.ios),
-.webkit:not(.mac-os):not(.ios) {
-  &.scrollbar {
-    margin-right: -1rem;
-  }
-}
-
 .ios {
   .form-control {
     font-size: 1rem;
