--- a/src/assets/scss/elements/_scrollbar.scss
+++ b/src/assets/scss/elements/_scrollbar.scss
@@ -91,3 +91,16 @@ html {
     scrollbar-color: var(--scrollbar-color-thumb) var(--scrollbar-color-track);
   }
 }
+
+/* Custom Explorer Styling
+-------------------------------------------------- */
+
+.ubuntu,
+.windows,
+.blink:not(.ios),
+.webkit:not(.mac-os):not(.ios) {
+  &.scrollbar {
+    margin-right: -1rem;
+    max-width: 100vw;
+  }
+}
